--- a/notebooks/EDA_teo.ipynb
+++ b/notebooks/EDA_teo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4              0.0            29.812030    16492.0      0  25971.0  "
       ]
      },
-     "execution_count": 242,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "4            29.812030    16492.0      0  25971.0    7      1  2017  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = df_train.fillna(-1)"
+    "df_train = df_train.fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,9 +403,9 @@
        "      <td>395.41</td>\n",
        "      <td>BRAND1</td>\n",
        "      <td>1.16</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>24175.0</td>\n",
        "      <td>10</td>\n",
@@ -419,9 +419,9 @@
        "      <td>114.23</td>\n",
        "      <td>BRAND2</td>\n",
        "      <td>0.52</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>54158.0</td>\n",
        "      <td>10</td>\n",
@@ -435,9 +435,9 @@
        "      <td>395.41</td>\n",
        "      <td>BRAND1</td>\n",
        "      <td>1.14</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>14100.0</td>\n",
        "      <td>10</td>\n",
@@ -451,9 +451,9 @@
        "      <td>395.41</td>\n",
        "      <td>BRAND1</td>\n",
        "      <td>1.13</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>5591.0</td>\n",
        "      <td>10</td>\n",
@@ -467,9 +467,9 @@
        "      <td>114.23</td>\n",
        "      <td>BRAND2</td>\n",
        "      <td>0.51</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>41870.0</td>\n",
        "      <td>10</td>\n",
@@ -482,21 +482,21 @@
       ],
       "text/plain": [
        "    sku    pack  size (GM)   brand  price  POS_exposed w-1  \\\n",
-       "0  2689  SINGLE     395.41  BRAND1   1.16             -1.0   \n",
-       "1  1027  SINGLE     114.23  BRAND2   0.52             -1.0   \n",
-       "2  2696  SINGLE     395.41  BRAND1   1.14             -1.0   \n",
-       "3  2698  SINGLE     395.41  BRAND1   1.13             -1.0   \n",
-       "4  1035  SINGLE     114.23  BRAND2   0.51             -1.0   \n",
+       "0  2689  SINGLE     395.41  BRAND1   1.16              0.0   \n",
+       "1  1027  SINGLE     114.23  BRAND2   0.52              0.0   \n",
+       "2  2696  SINGLE     395.41  BRAND1   1.14              0.0   \n",
+       "3  2698  SINGLE     395.41  BRAND1   1.13              0.0   \n",
+       "4  1035  SINGLE     114.23  BRAND2   0.51              0.0   \n",
        "\n",
        "   volume_on_promo w-1  sales w-1  scope   target  day  month  year  \n",
-       "0                 -1.0       -1.0      0  24175.0   10     12  2016  \n",
-       "1                 -1.0       -1.0      1  54158.0   10     12  2016  \n",
-       "2                 -1.0       -1.0      0  14100.0   10     12  2016  \n",
-       "3                 -1.0       -1.0      0   5591.0   10     12  2016  \n",
-       "4                 -1.0       -1.0      1  41870.0   10     12  2016  "
+       "0                  0.0        0.0      0  24175.0   10     12  2016  \n",
+       "1                  0.0        0.0      1  54158.0   10     12  2016  \n",
+       "2                  0.0        0.0      0  14100.0   10     12  2016  \n",
+       "3                  0.0        0.0      0   5591.0   10     12  2016  \n",
+       "4                  0.0        0.0      1  41870.0   10     12  2016  "
       ]
      },
-     "execution_count": 250,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,23 +520,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\blueace17\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\lightgbm\\basic.py:1295: UserWarning: categorical_feature in Dataset is overridden.\n",
+      "New categorical_feature is ['brand', 'day', 'month', 'pack', 'year']\n",
+      "  'New categorical_feature is {}'.format(sorted(list(categorical_feature))))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "9.934343915710013"
+       "16.49684131218611"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df_train.drop(['target','scope'],axis=1), df_train.target, test_size=0.2, random_state=17)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df_train.drop(['target','scope'],axis=1), df_train.target, test_size=0.2, shuffle=False)\n",
     "\n",
     "model = lgb.LGBMRegressor()\n",
     "\n",
@@ -556,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,23 +585,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.885432296277864"
+       "13.787627855216572"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df_train.drop(['target','scope'],axis=1), df_train.target, test_size=0.2, random_state=17)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df_train.drop(['target','scope'],axis=1), df_train.target, test_size=0.2, shuffle=False)\n",
     "\n",
     "model = lgb.LGBMRegressor()\n",
     "\n",
@@ -601,6 +610,32 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "mean_absolute_percentage_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "208.00991069972318"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "reg = LinearRegression().fit(X_train, y_train)\n",
+    "\n",
+    "preds = reg.predict(X_test)\n",
+    "\n",
+    "mean_absolute_percentage_error(preds, y_test)"
    ]
   }
  ],
