--- a/notebooks/EDA_teo.ipynb
+++ b/notebooks/EDA_teo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4              0.0            29.812030    16492.0      0  25971.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "4            29.812030    16492.0      0  25971.0    7      1  2017  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "4                  0.0        0.0      1  41870.0   10     12  2016  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,25 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\blueace17\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\lightgbm\\basic.py:1295: UserWarning: categorical_feature in Dataset is overridden.\n",
-      "New categorical_feature is ['brand', 'day', 'month', 'pack', 'year']\n",
-      "  'New categorical_feature is {}'.format(sorted(list(categorical_feature))))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "16.49684131218611"
+       "14.775017346342667"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +540,7 @@
     "\n",
     "model = lgb.LGBMRegressor()\n",
     "\n",
-    "model.fit(X_train, y_train,  categorical_feature=['pack', 'brand','day','year','month'])\n",
+    "model.fit(X_train, y_train,  categorical_feature=['pack', 'brand','day','year','month','sku'])\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
@@ -565,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13.787627855216572"
+       "12.356943963078896"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,37 +596,11 @@
     "\n",
     "model = lgb.LGBMRegressor()\n",
     "\n",
-    "model.fit(X_train, y_train,  categorical_feature=['pack', 'brand','day','year','month'])\n",
+    "model.fit(X_train, y_train,  categorical_feature=['pack', 'brand','day','year','month','sku'])\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
     "mean_absolute_percentage_error(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "208.00991069972318"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "reg = LinearRegression().fit(X_train, y_train)\n",
-    "\n",
-    "preds = reg.predict(X_test)\n",
-    "\n",
-    "mean_absolute_percentage_error(preds, y_test)"
    ]
   }
  ],
